	- Allow input of categorical matrix to all the intermediate functions
	- no longer allow distFunction as argument to internal functions (subsampleClustering, mainClustering, seqCluster). These functions no longer will calculate distances, only the top level function, `clusterSingle`. 

Changes in version 2.5.3 (Release date: May 29, 2019)
==============

Changes:
* Made "kmeans" the default in subsampling if data type is "X"
* Set checkDiss=FALSE by default for most all functions (exception is when user defines distance function)
* Add warnings when forced to calculate a nxn distance matrix 
* Improve generic classification to centroids (used by "pam") so not calculate unnecessary distances. 
* Added mbkmeans as built-in cluster function

Bugs:
* Remove bug in built-in cluster function "kmeans" so as to not make unnecessary nxn distance matrix.


Changes in version 2.3.0( Release date: May 3, 2019)
==============

Changes:
* MAJOR CHANGE TO CLASS (1): the dendrogram is now stored in the object as the S4 class `phylo4d` in the package `phylobase`. This allows easier manipulation of the dendrogram by the user (including user-defined dendrograms), as well as allowing storage of information about dendrogram nodes that the programs can make use of. The slot "dendro_outbranch" has been removed because this information is now stored in the `phylo4d` object.
* MAJOR CHANGE TO CLASS (2): the `coClustering` is now stored in the object as a sparse matrix of the S4 class `Matrix` from the package `Matrix`  
* New functions: 
 - `sampleDendrogram`, `clusterDendrogram`, `nodeLabels` to access and manipulate the stored dendrograms
 - `numericalAsCharacter` to allow create two digit characters from integers for better sorting of character versions of integers.
 - `getClusterIndex` function used to match argument `whichClusters` to indices of the `clusterMatrix` (previously was not exported or documented)
* Added arguments to the following functions: 