@@ -5,6 +5,9 @@ Changes in version 2.5.3-9002 (Release date: )
 	- Allow input of categorical matrix to all the intermediate functions
 	- no longer allow distFunction as argument to internal functions (subsampleClustering, mainClustering, seqCluster). These functions no longer will calculate distances, only the top level function, `clusterSingle`. 
 
+Bugs:
+* Fix so export getReducedData
+
 Changes in version 2.5.3 (Release date: May 29, 2019)
 ==============
 
